web font fixes to make it look less broken in chrome on windows 8 /*sigh*/

--- a/assets/css/01base/variablesmixins.scss
+++ b/assets/css/01base/variablesmixins.scss
@@ -22,9 +22,8 @@ Font families */
   font-family: 'latolight';
   src: url('../fonts/lato-light-webfont.eot');
   src: url('../fonts/lato-light-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/lato-light-webfont.woff') format('woff'),
-       url('../fonts/lato-light-webfont.ttf') format('truetype'),
-       url('../fonts/lato-light-webfont.svg#latolight') format('svg');
+       url('../fonts/lato-light-webfont.svg#latolight') format('svg'),
+       url('../fonts/lato-light-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -32,9 +31,8 @@ Font families */
   font-family: 'latolight_italic';
   src: url('../fonts/lato-lightitalic-webfont.eot');
   src: url('../fonts/lato-lightitalic-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/lato-lightitalic-webfont.woff') format('woff'),
-       url('../fonts/lato-lightitalic-webfont.ttf') format('truetype'),
-       url('../fonts/lato-lightitalic-webfont.svg#latolight_italic') format('svg');
+       url('../fonts/lato-lightitalic-webfont.svg#latolight_italic') format('svg'),
+       url('../fonts/lato-lightitalic-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -42,9 +40,8 @@ Font families */
   font-family: 'lato_regular';
   src: url('../fonts/lato-regular-webfont.eot');
   src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/lato-regular-webfont.woff') format('woff'),
-       url('../fonts/lato-regular-webfont.ttf') format('truetype'),
-       url('../fonts/lato-regular-webfont.svg#lato_regular') format('svg');
+       url('../fonts/lato-regular-webfont.svg#lato_regular') format('svg'),
+       url('../fonts/lato-regular-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
